infra/observability/overlays/recette/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: ns-observability
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - grafana.nudger.logo-solutions.fr
      secretName: grafana-tls
  ingressClassName: nginx
  rules:
    - host: grafana.nudger.logo-solutions.fr
      secretName: grafana-tls
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helm-grafana
                port:
                  number: 80
